Additional unit tests, MeshShape serialisation bug fix and cpp update. - Added unit test to directly test collated packet encoding and decoding. - Fixed an issue with MeshShape where DrawType was not being read and not being validated. - Updated cpp branch.

--- a/3esCore/CoreTests/CoreTests.csproj
+++ b/3esCore/CoreTests/CoreTests.csproj
@@ -36,6 +36,8 @@
     <Compile Include="Packets.cs" />
     <Compile Include="Shapes.cs" />
     <Compile Include="ShapeTestFramework.cs" />
+    <Compile Include="Common.cs" />
+    <Compile Include="Collated.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\3esCore\3esCore.csproj">
