Updated build system to support dotnet on Linux
- Changed GZip library from Ionic DotNetZip to SharpCompress (see comment below)
- Renamed 3esinfo to support case sensitive paths (Linux)
- Changed from netcoreapp2.1 to netstandard2.0 framework.


Note: the core dotnet GZip implementation is the fastest which as been evaluated, but cannot be used as it is not implemented under Unity. For this reason, an open source, general .Net implementation is used.

--- a/3esCore/3esCore/3esCore.csproj
+++ b/3esCore/3esCore/3esCore.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;net461</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <RootNamespace>Tes</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
@@ -24,7 +24,7 @@
   <PackageReleaseNotes>Release</PackageReleaseNotes>  </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Zlib.Portable" Version="1.11.0" />
+    <PackageReference Include="sharpcompress" Version="0.22.0" />
   </ItemGroup>
 
 </Project>
