--- a/3esCore/3esRuntime/3esRuntime.csproj
+++ b/3esCore/3esRuntime/3esRuntime.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;net461</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <RootNamespace>Tes</RootNamespace>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 
     <Version>0.7.0</Version>
     <Authors>Kazys Stepanas</Authors>
