--- a/3esCore/3esServerTest/3esServerTest.csproj
+++ b/3esCore/3esServerTest/3esServerTest.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;net461</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <OutputType>Exe</OutputType>
     <RootNamespace>Tes</RootNamespace>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 
     <Version>0.7.0</Version>
     <Authors>Kazys Stepanas</Authors>
