--- a/3esCore/3esrec/3esrec.csproj
+++ b/3esCore/3esrec/3esrec.csproj
@@ -1,9 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;net461</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <OutputType>Exe</OutputType>
     <RootNamespace>Tes</RootNamespace>
+    <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 
     <Version>0.7.0</Version>
     <Authors>Kazys Stepanas</Authors>
@@ -25,7 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\3esCore\3esCore.csproj" />
-    <PackageReference Include="Zlib.Portable" Version="1.11.0" />
+    <PackageReference Include="sharpcompress" Version="0.22.0" />
   </ItemGroup>
 
 </Project>
