--- a/3esCore/plugin/3esExamplePluginCore/3esExamplePluginCore.csproj
+++ b/3esCore/plugin/3esExamplePluginCore/3esExamplePluginCore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp2.1;net461</TargetFrameworks>
+    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
     <RootNamespace>Tes</RootNamespace>
 
     <Version>0.7.0</Version>
