Updated Linux build support for .net code and updated cpp module
- Changed .net framework from netstandard2.0 to netcoreapp2.2. Tested with a Linux Unity build
- Updated build instructions to support netcoreapp2.2
- Updated cpp module.

--- a/3esCore/plugin/3esExamplePlugin/3esExamplePlugin.csproj
+++ b/3esCore/plugin/3esExamplePlugin/3esExamplePlugin.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.2;net461</TargetFrameworks>
     <RootNamespace>Tes</RootNamespace>
 
     <Version>0.7.0</Version>
