--- a/3esCore/CoreTests/CoreTests.csproj
+++ b/3esCore/CoreTests/CoreTests.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netstandard2.0;net461</TargetFrameworks>
+    <TargetFrameworks>netcoreapp2.2;net461</TargetFrameworks>
     <RootNamespace>Tes</RootNamespace>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 
