--- a/3esCore/3esServerTest/3esServerTest.csproj
+++ b/3esCore/3esServerTest/3esServerTest.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks Condition="'$(MSBuildRuntimeType)'=='Core'">netcoreapp2.2</TargetFrameworks>
+    <TargetFrameworks Condition="'$(MSBuildRuntimeType)'=='Core'">netstandard2.0;netcoreapp2.2</TargetFrameworks>
     <TargetFrameworks Condition="'$(MSBuildRuntimeType)'=='Full'">net461</TargetFrameworks>
     <OutputType>Exe</OutputType>
     <RootNamespace>Tes</RootNamespace>
