--- a/3esCore/plugin/3esExamplePlugin/3esExamplePlugin.csproj
+++ b/3esCore/plugin/3esExamplePlugin/3esExamplePlugin.csproj
@@ -21,6 +21,7 @@
     <!-- <RepositoryUrl>Repo URL</RepositoryUrl> -->
     <!-- <RepositoryType>Repo type</RepositoryType> -->
     <!-- <PackageTags>Tags</PackageTags> -->
+    <UNITY_DLL_PATH Condition="'$(UNITY_DLL_PATH)'==''"></UNITY_DLL_PATH>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,16 +30,8 @@
     <ProjectReference Include="..\3esExamplePluginCore\3esExamplePluginCore.csproj" />
   </ItemGroup>
 
-  <ItemGroup>
-    <Reference Include="UnityEngine" Condition="!Exists('$(UNITY_DLL_PATH)') And Exists('\\Applications\\Unity\\Unity.app\\Contents\\Managed\\UnityEngine.dll') ">
-      <HintPath>\Applications\Unity\Unity.app\Contents\Managed\UnityEngine.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine" Condition="!Exists('$(UNITY_DLL_PATH)') And Exists('C:\\Program Files\\Unity\\Editor\\Data\\Managed\\UnityEngine.dll') ">
-      <HintPath>C:\Program Files\Unity\Editor\Data\Managed\UnityEngine.dll</HintPath>
-      <Private>False</Private>
-    </Reference>
-    <Reference Include="UnityEngine" Condition=" Exists('$(UNITY_DLL_PATH)') ">
+  <ItemGroup Condition="Exists('$(UNITY_DLL_PATH)')">
+    <Reference Include="UnityEngine">
       <HintPath>$(UNITY_DLL_PATH)\UnityEngine.dll</HintPath>
       <Private>False</Private>
     </Reference>
