Restored keyframe functionality
- Push keyframe control messages into the pending packet queue. This fixes keyframe handling.
- Rename StreamThread.TryKeyframe() to StreamThread.TryRestoreKeyframe() for better semantics.
- Changed default keyframe frame interval from 100 to 1000. Use data rates to better control data dense keyframing.
- Fixed misuse of PlaybackSettings.KeyframeFrameSeparation.
- Fixed data delta keyframing and adjusted to use MiB instead of KiB (was incorrectly labelled Kb).
- Tuned keyframe settings to something which plays resonably on a large data file.
- Fixed tasks.json publish args

--- a/3esCore/.vscode/tasks.json
+++ b/3esCore/.vscode/tasks.json
@@ -44,7 +44,7 @@
           "publish",
           "-f", "netcoreapp2.2",
           "-c", "Debug",
-          "-o ${workspaceFolder}\\build\\Debug",
+          "-o", "${workspaceFolder}\\build\\Debug",
           "-property:GenerateFullPaths=true",
           "-r", "win10-x64"
         ]
@@ -54,7 +54,7 @@
           "publish",
           "-f", "netcoreapp2.2",
           "-c", "Debug",
-          "-o ${workspaceFolder}/build/Debug",
+          "-o", "${workspaceFolder}/build/Debug",
           "-property:GenerateFullPaths=true",
           "-r", "linux-x64"
         ]
@@ -64,7 +64,7 @@
           "publish",
           "-f", "netcoreapp2.2",
           "-c", "Debug",
-          "-o ${workspaceFolder}/build/Debug",
+          "-o", "${workspaceFolder}/build/Debug",
           "-property:GenerateFullPaths=true",
           "-r", "osx-x64"
         ]
@@ -84,7 +84,7 @@
           "publish",
           "-f", "netcoreapp2.2",
           "-c", "Release",
-          "-o ${workspaceFolder}\\build\\Release",
+          "-o", "${workspaceFolder}\\build\\Release",
           "-property:GenerateFullPaths=true",
           "-r", "win10-x64"
         ]
@@ -94,7 +94,7 @@
           "publish",
           "-f", "netcoreapp2.2",
           "-c", "Release",
-          "-o ${workspaceFolder}/build/Release",
+          "-o", "${workspaceFolder}/build/Release",
           "-property:GenerateFullPaths=true",
           "-r", "linux-x64"
         ]
@@ -104,7 +104,7 @@
           "publish",
           "-f", "netcoreapp2.2",
           "-c", "Release",
-          "-o ${workspaceFolder}/build/Release",
+          "-o", "${workspaceFolder}/build/Release",
           "-property:GenerateFullPaths=true",
           "-r", "osx-x64"
         ]
