--- a/3esCore/.vscode/tasks.json
+++ b/3esCore/.vscode/tasks.json
@@ -4,11 +4,11 @@
   "version": "2.0.0",
   "tasks": [
     {
-      "label": "build Debug",
+      "label": "build",
       "command": "dotnet",
       "args": [
         "build",
-        "-c", "Debug",
+        "-c", "${input:build_config}",
         "-property:GenerateFullPaths=true"
       ],
       "type": "shell",
@@ -22,28 +22,13 @@
       "problemMatcher": "$msCompile"
     },
     {
-      "label": "build Release",
-      "command": "dotnet",
-      "args": [
-        "build",
-        "-c", "Release",
-        "-property:GenerateFullPaths=true"
-      ],
-      "type": "shell",
-      "group": "build",
-      "presentation": {
-        "reveal": "silent"
-      },
-      "problemMatcher": "$msCompile"
-    },
-    {
-      "label": "publish Debug",
+      "label": "publish",
       "command": "dotnet",
       "windows": {
         "args": [
           "publish",
           "-f", "netcoreapp2.2",
-          "-c", "Debug",
+          "-c", "${input:build_config}",
           "-o", "${workspaceFolder}\\build\\Debug",
           "-property:GenerateFullPaths=true",
           "-r", "win10-x64"
@@ -53,7 +38,7 @@
         "args": [
           "publish",
           "-f", "netcoreapp2.2",
-          "-c", "Debug",
+          "-c", "${input:build_config}",
           "-o", "${workspaceFolder}/build/Debug",
           "-property:GenerateFullPaths=true",
           "-r", "linux-x64"
@@ -63,7 +48,7 @@
         "args": [
           "publish",
           "-f", "netcoreapp2.2",
-          "-c", "Debug",
+          "-c", "${input:build_config}",
           "-o", "${workspaceFolder}/build/Debug",
           "-property:GenerateFullPaths=true",
           "-r", "osx-x64"
@@ -77,49 +62,9 @@
       "problemMatcher": "$msCompile"
     },
     {
-      "label": "publish Release",
-      "command": "dotnet",
-      "windows": {
-        "args": [
-          "publish",
-          "-f", "netcoreapp2.2",
-          "-c", "Release",
-          "-o", "${workspaceFolder}\\build\\Release",
-          "-property:GenerateFullPaths=true",
-          "-r", "win10-x64"
-        ]
-      },
-      "linux": {
-        "args": [
-          "publish",
-          "-f", "netcoreapp2.2",
-          "-c", "Release",
-          "-o", "${workspaceFolder}/build/Release",
-          "-property:GenerateFullPaths=true",
-          "-r", "linux-x64"
-        ]
-      },
-      "osx": {
-        "args": [
-          "publish",
-          "-f", "netcoreapp2.2",
-          "-c", "Release",
-          "-o", "${workspaceFolder}/build/Release",
-          "-property:GenerateFullPaths=true",
-          "-r", "osx-x64"
-        ]
-      },
-      "type": "shell",
-      "group": "build",
-      "presentation": {
-        "reveal": "silent"
-      },
-      "problemMatcher": "$msCompile"
-    },
-    {
-      "label": "marshal Debug",
-      "dependsOn": "build Debug",
-      "command": "python unity-marshal.py -c Debug",
+      "label": "marshal",
+      "dependsOn": "build",
+      "command": "python unity-marshal.py -c ${input:build_config}",
       "type": "shell",
       "group": "none",
       "options": {
@@ -129,20 +74,15 @@
         "reveal": "always"
       },
       "problemMatcher": "$msCompile"
-    },
+    }
+  ],
+  "inputs": [
     {
-      "label": "marshal Release",
-      "dependsOn": "build Release",
-      "command": "python unity-marshal.py -c Release",
-      "type": "shell",
-      "group": "none",
-      "options": {
-        "cwd": "${workspaceFolder}"
-      },
-      "presentation": {
-        "reveal": "always"
-      },
-      "problemMatcher": "$msCompile"
+      "id": "build_config",
+      "type": "pickString",
+      "options": [ "Debug", "Release" ],
+      "default": "Debug",
+      "description": "Build configuration selection."
     }
   ]
 }
