--- a/3rdEyeScene/Packages/manifest.json
+++ b/3rdEyeScene/Packages/manifest.json
@@ -1,9 +1,10 @@
 {
   "dependencies": {
     "com.unity.2d.sprite": "1.0.0",
-    "com.unity.ide.vscode": "1.2.1",
-    "com.unity.test-framework": "1.1.16",
-    "com.unity.textmeshpro": "2.0.1",
+    "com.unity.ide.visualstudio": "2.0.7",
+    "com.unity.ide.vscode": "1.2.5",
+    "com.unity.test-framework": "1.1.24",
+    "com.unity.textmeshpro": "3.0.1",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
